syntax = "proto3";

package common;

option go_package = "github.com/fatelei/grpc-svn/internal/common";

message ResponseStatus {
  StatusCode code = 1;
  string message = 2;

  enum StatusCode {
    SUCCESS = 0;
    UNAUTHORIZED = 401;
    INTERNAL_SERVER_ERROR = 500;

    UNKNOWN = 1400;
    OBJECT_NOT_FOUND = 1401;
    VALUE_NOT_FOUND = 1402;
    VALUE_ALREADY_EXISTS = 1403;
    VALUE_OUT_OF_RANGE = 1404;
    INVALID_VALUE = 1405;
    FAILED_DEPENDENCY = 1406;
    FORBIDDEN = 1407;
    USERNAME_TAKEN = 1408;
    EMAIL_TAKEN = 1409;
    REPO_NOT_EXISTS = 1410;
    GET_BRANCH_FAILED = 1411;
    GET_COMMIT_FAILED = 1412;
    INVALID_GIT_URL = 1413;
    EMPTY_REPO = 1414;
  }
}